# ai-nutrition-tracker

./: .env.example  .gitignore  .ignore  AGENTS.md  Makefile  app.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
adk/: Dockerfile  pyproject.toml
adk/food-text/: agent.py
adk/food_text/: FAQ.md  agent.py  models.py  tools.py
adk/food_text/callbacks/: before_merger.py
adk/food_text/subagents/: InputParserAgent.py  IntentClassificationAgent.py  MergerAgent.py  ParallelFoodProcessorAgent.py
adk/multi_tool_agent/: agent.py
apps/mobile/: package.json  pnpm-lock.yaml
apps/server/: package.json
backend/: Dockerfile  pyproject.toml  test_nutrition_api.py  test_resubmit.py
backend/foods/: models.py  (+2 more)
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
mobile/: docker-compose.yml  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
old-ver/backend/: .dockerignore  pyproject.toml  pyrightconfig.json  test_audio_transcription.py  test_eaten_at.py
old-ver/backend/foods/: models.py
old-ver/backend/foods/migrations/: 0002_food_delete_customfood.py  0003_rename_micros_food_others_remove_food_description_and_more.py  0004_food_eaten_at.py
old-ver/backend/nutrition/: agent.py
old-ver/backend/nutrition_tracker/: apps.py  urls.py  wsgi.py
old-ver/backend/nutrition_tracker/migrations/: 0001_initial.py  0002_delete_customfood.py
old-ver/backend/users/: models.py  utils.py  views.py
old-ver/backend/users/migrations/: 0001_initial.py
server/: go.mod  go.sum  main.go
(+157 files in other folders)
